@@ -1,3 +1,13 @@
+2010-03-06  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Eric Seidel.
+
+        Removed unnecessary WinCE file.
+        The same functionality is provided by platform/win/SystemTimeWin.cpp.
+        https://bugs.webkit.org/show_bug.cgi?id=35799
+
+        * platform/wince/SystemTimeWince.cpp: Removed.
+
 2010-03-06  Joanmarie Diggs  <joanmarie.diggs@gmail.com>
 
         Reviewed by Eric Seidel.
